# Kaggle

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  metrics.py  provider.py  registry.py  runtime.py  session.py
backend/app/core/: adk_runtime.py  ai_config.py  config.py  evidence_runtime.py  exceptions.py  executive_report_runtime.py  guardian_config.py  guardian_runtime.py  logging.py  mcp_runtime.py  middleware.py  mitre_runtime.py  openapi.py  response_runtime.py  risk_runtime.py  state.py  threat_intelligence_runtime.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  agent_execution.py  audit_log.py  base.py  enums.py  evaluation_metric.py  evidence.py  executive_report.py  guardian_audit.py  incident.py  investigation.py  investigation_replay.py  investigation_run.py  log_file.py  mitre_finding.py  response_plan.py  risk_assessment.py  threat_intelligence_finding.py  timeline_event.py
backend/app/repositories/: __init__.py  agent_execution_repository.py  audit_log_repository.py  evaluation_metric_repository.py  executive_report_repository.py  guardian_audit_repository.py  incident_repository.py  investigation_replay_repository.py  investigation_run_repository.py  log_repository.py  mitre_finding_repository.py  response_plan_repository.py  risk_assessment_repository.py  threat_intelligence_finding_repository.py  timeline_event_repository.py
backend/app/schemas/: __init__.py  ai_health.py  ai_test.py  audit_log.py  dashboard.py  enums.py  evaluation.py  evidence.py  evidence_agent.py  executive_report_agent.py  guardian_agent.py  incident.py  investigation.py  investigation_replay.py  log_file.py  mitre_agent.py  orchestration.py  response.py  response_agent.py  risk_agent.py  threat_intelligence_agent.py
backend/app/services/: __init__.py  (+19 more)
backend/scripts/: demo_agent_outputs.py  demo_catalog.py  seed_demo_data.py
(+323 files in other folders)
