[project]
name = "oz-ai-backend"
version = "0.1.0"
description = "Oz AI — Enterprise Incident Response Platform (Backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.13.4",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.20",
    "google-adk==2.3.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "httpx==0.28.1",
    "isort==5.13.2",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "agents", "agents.coordinator", "agents.evidence", "mcp", "mcp.tools"]

[tool.setuptools.package-dir]
"agents" = "../agents"
"mcp" = "../mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["../tests", "../agents/coordinator/tests", "../agents/evidence/tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agents", "app", "mcp", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
